<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="choose_your_mode">Choose your mode:</string>
    <string name="statistics">Statistics</string>
    <string name="player">Player</string>
    <string name="computer">Computer</string>
    <string-array name="levels">
        <item name="easy">Easy</item>
        <item name="normal">Normal</item>

    </string-array>
    <string name="player0">Player0</string>
    <string name="computer0">Computer0</string>
    <string name="player1">Player1</string>
    <string name="computer1">Computer1</string>
    <string name="tic_tac_toe">Tic Tac Toe!</string>
    <string name="start_game">Start game</string>
    <string name="home">Home</string>
    <string name="_1_vs_1">1 vs 1</string>
    <string name="select_level">Select level</string>


</resources>
