<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/choose_your_mode"
    android:textSize="50dp"
    android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/icsButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/ics"
            android:background="@drawable/buttonrounded"
            android:padding="10dp"
            android:layout_weight="0.04"
            />

        <ImageButton
            android:id="@+id/zeroButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/zero"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonrounded"/>

        <Button
            android:id="@+id/pvpButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonrounded"
            android:layout_marginLeft="10dp"
            android:text="@string/_1_vs_1" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_level"
        android:textSize="20dp"
        android:gravity="center" />
    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/levels"
       ></Spinner>

</LinearLayout>