<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlue"
    tools:context="com.example.dani.tic_tac_toe.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tic_tac_toe"
        android:textSize="30dp"
       />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/start_game"
        android:background="@drawable/buttonrounded"
        />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/startButton"
        android:text="@string/home"
        android:background="@drawable/buttonrounded"/>

    <Button
        android:id="@+id/staticticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/startButton"
        android:text="Statistics"
        android:background="@drawable/buttonrounded"/>

    <LinearLayout
        android:id="@+id/fragmentBoardHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/startButton"
        android:layout_below="@id/textView"
        android:orientation="vertical"
        ></LinearLayout>

</RelativeLayout>
